# NMPDE_WaveEquation

./: .gitignore  CMakeLists.txt  README.md  dispersione by Luca.py  plot.py  progetto.cpp  wave.cpp  wave.hpp
Newmark/: Wave.cpp  Wave.hpp  Wave_Newmark.cpp
Theta_Method/parallel/: WaveParallel.cpp  WaveParallel.hpp  main.cpp
Theta_Method/serial/: Wave.cpp  Wave.hpp  main.cpp
src/: Wave.cpp  Wave.hpp  Wave_Newmark.cpp  dispersion.py  dispersion_fft.py  plot_error.py
src/Newmark/: Wave.cpp  Wave.hpp  main.cpp
src/Theta_Method/parallel/: WaveParallel.cpp  WaveParallel.hpp  main.cpp
src/Theta_Method/serial/: Wave.hpp  main.cpp
